small updates to make codex work

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,9 @@
 ; PlatformIO configuration
 ; Adjust board / framework as needed (example: Teensy 4.1)
 
+[platformio]
+core_dir = .pio_core
+
 [env:teensy41]
 platform = teensy
 board = teensy41
